@@ -1,6 +1,10 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
+  04 Feb 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: Removed an
+	unnecessary call to os.unlink() in movefile that resulted in it failing
+	when moving files across devices.
+
 *portage-2.0.46-r10 (14 Jan 2003): Feature/Function Cleanups
 
   03 Feb 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: Added
